collabmail-pro/backend/python-flask/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-backend-service
spec:
  selector:
    app: python-flask-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
