collabmail-pro/backend/python-flask/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-ingress
spec:
  rules:
    - host: python-flask.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-flask-backend-service
                port:
                  number: 8080
